fixed create hunt button disappearing in dark mode

--- a/client/src/app/hunts/addHunt/add-hunt.component.scss
+++ b/client/src/app/hunts/addHunt/add-hunt.component.scss
@@ -4,29 +4,12 @@
   padding: 5px;
 }
 
-/* .add-hunt-card {
-  background-color: white;
-
-  @media (prefers-color-scheme: dark) {
-    background-color: white;
-  }
-}
-
-.mat-input {
-  background-color: white;
-
-  @media (prefers-color-scheme: dark) {
-    background-color: white;
-  }
-} */
-
 .add-hunt-card {
   background-color: white;
   @media (prefers-color-scheme: dark) {
     background-color: white;
   }
 
-  /* This targets the actual input field within the mat-form-field */
   mat-form-field .mat-input-element {
     background-color: white;
     @media (prefers-color-scheme: dark) {
@@ -34,7 +17,6 @@
     }
   }
 
-  /* This targets the underline of the input field */
   .mat-form-field-underline {
     background-color: white;
     @media (prefers-color-scheme: dark) {
@@ -42,13 +24,25 @@
     }
   }
 
-  /* This targets the label of the input field */
   .mat-form-field-label {
     color: black;
   }
 
-  /* This targets the ripple of the input field */
   .mat-form-field-ripple {
     background-color: black;
+  }
+}
+
+::ng-deep .submit-button {
+  color: #0056b3 !important;
+  @media (prefers-color-scheme: dark) {
+    color: #0056b3 !important;
+  }
+}
+
+::ng-deep .submit-button:disabled {
+  color: gray !important;
+  @media (prefers-color-scheme: dark) {
+    color: gray !important;
   }
 }
